// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinancialProduct Контроллер BNPL Резолвер вернул ошибку 1`] = `
Object {
  "bnplInfo": undefined,
  "financialProductPriorities": Array [
    Array [
      "BNPL",
    ],
  ],
  "financialProducts": Array [],
  "financialProductsActive": Object {
    "BNPL": true,
    "TINKOFF_CREDIT": false,
    "TINKOFF_INSTALLMENTS": false,
  },
  "installmentsInfo": undefined,
  "isCreditBrokerExp": false,
  "monthlyPayment": undefined,
  "offerId": "123",
  "regionId": "213",
  "wareId": "324",
}
`;

exports[`FinancialProduct Контроллер BNPL Резолвер вернул планы 1`] = `
Object {
  "bnplInfo": Object {
    "defaultPlan": "2month",
    "plans": Array [
      Object {
        "constructor": "2month",
        "detailsUrl": "https://mocked.url#longsplit",
        "fee": 0,
        "payments": Array [
          Object {
            "amount": 3000,
            "datetime": "2022-12-16",
            "status": "coming",
          },
          Object {
            "amount": 1000,
            "datetime": "2022-12-20",
            "status": "coming",
          },
          Object {
            "amount": 1000,
            "datetime": "2022-12-24",
            "status": "coming",
          },
          Object {
            "amount": 1000,
            "datetime": "2022-12-28",
            "status": "coming",
          },
        ],
        "type": "bnpl",
        "visualProperties": Object {
          "colors": Object {},
          "nextDatesDescription": "еще 5 платежей",
          "nextPaymentsDescription": "по 2222",
          "shortTitle": "2 месяца",
        },
      },
    ],
  },
  "financialProductPriorities": Array [
    Array [
      "BNPL",
    ],
  ],
  "financialProducts": Array [
    "BNPL",
  ],
  "financialProductsActive": Object {
    "BNPL": true,
    "TINKOFF_CREDIT": false,
    "TINKOFF_INSTALLMENTS": false,
  },
  "installmentsInfo": undefined,
  "isCreditBrokerExp": false,
  "monthlyPayment": undefined,
  "offerId": "123",
  "regionId": "213",
  "wareId": "324",
}
`;

exports[`FinancialProduct Контроллер BNPL Резолвер ничего не вернул 1`] = `
Object {
  "bnplInfo": undefined,
  "financialProductPriorities": Array [
    Array [
      "BNPL",
    ],
  ],
  "financialProducts": Array [],
  "financialProductsActive": Object {
    "BNPL": true,
    "TINKOFF_CREDIT": false,
    "TINKOFF_INSTALLMENTS": false,
  },
  "installmentsInfo": undefined,
  "isCreditBrokerExp": false,
  "monthlyPayment": undefined,
  "offerId": "123",
  "regionId": "213",
  "wareId": "324",
}
`;

exports[`FinancialProduct Контроллер Нет фин предложений 1`] = `
Object {
  "bnplInfo": undefined,
  "financialProductPriorities": Array [],
  "financialProducts": Array [],
  "financialProductsActive": Object {
    "BNPL": false,
    "TINKOFF_CREDIT": false,
    "TINKOFF_INSTALLMENTS": false,
  },
  "installmentsInfo": undefined,
  "isCreditBrokerExp": false,
  "monthlyPayment": undefined,
  "offerId": "123",
  "regionId": "213",
  "wareId": "324",
}
`;
